# SNTree

./: .gitignore  LICENSE.txt  README.txt  pyproject.toml
legacy/: utils.py
legacy/likelihood/: locus_loglik_single.py
src/sntree/: __main__.py  cli.py  config.py  constants.py  utils.py
src/sntree/diploid/: em_alpha_beta_diploid.py  locus_loglik_batch_diploid.py  loglik_all_snvs_diploid.py  quick_null_stats_diploid.py
src/sntree/io/: input_paths.py  io.py  io_cna.py  io_preprocess.py  io_snv.py  io_tree.py  snv_index.py
src/sntree/likelihood/: em_alpha_beta.py  local_constant_cn.py  locus_loglik_batch.py  loglik_all_snvs.py  numba_kernels.py  quick_null_stats.py
src/sntree/model/: snv_dataset.py  transition_model.py  tree_model.py
src/sntree/phylo/: phylo.py  refinement.py  simulate.py  tree_search.py  tree_utils.py  visualize.py
src/sntree/workflow/: em.py  ml.py  pipeline.py  preprocess_tree.py  refine.py
tests/: test_input_paths.py  test_io_cna.py  test_locus_loglik_batch.py  test_wrapper.py
